BUGFIX: Fix scrolling bug in KickAssets window.
This bug could be reproduced by opening the kickassets admin window and
making a rectangular selection which extended outside the window.  This
would cause scrollbars to appear on the kickassets window, which would
obscure the file list scrollbar.  Also the button bar at bottom would
disappear out of view.

--- a/css/kickassets.css
+++ b/css/kickassets.css
@@ -1,3 +1,6 @@
+body#KickAssets {
+  overflow: hidden;
+}
 
 #directory_list {padding:10px;}
 #directory_list li {list-style:none;}
